# pixTol-ESP

./: .gitmodules  .localvimrc  CMakeLists.txt  Makefile  TODO  lib32  partitions.csv  pio_homie_upload.py  pixtol.org  platformio.ini  pre_serial_upload.py  sdkconfig  sdkconfig.defaults
boards/: d1_mini_robo.json  esp_robo.json
build_scripts/: conf.py  fw_copy.py  generate_completions.py  ota.py  pre_serial_upload.py
components/: arduino
data/homie/: config.json  config1.json  config2-static.json  config2.json  config3.json  config4.json
lib/: CMakeLists.txt
lib/Arduino-modded/: Ticker.cpp  Ticker.h
lib/ESPAsyncE131_ID1781/: .library.json
lib/NeoPixelBus_ID547/: .library.json
lib/NeoPixelBus_ID547/src/internal/: NeoEsp32RmtMethod.h
lib/pixTol/: field.cpp  field.h
light_ws2812w/: WS2812w.cpp  WS2812w.h  cRGBW.h  light_ws2812w.cpp
src/: CMakeLists.txt  Fire.ino  artnet.h  artnet_d1.cpp  artnet_d1.h  base.cpp  base.h  battery.h  buffer.cpp  buffer.h  color.cpp  color.h  commands.h  config.cpp  config.h  debug.cpp  debug.h  debuglog.cpp  debuglog.h  device.h  dmxserial.cpp  dmxserial.h  dumper.h  effector.cpp  effector.h  envelope.h  event.cpp  event.h  field.h  firmware.h  freertos-playground.h  functions.cpp  functions.h  generators.h  inputnode.cpp  inputnode.h  inputter.h  iot.cpp  iot.h  log.cpp  (+30 more)
src/apps/: fogger.h  sleepmask.h  taxilight.cpp
src/homie/: outputnode.cpp  outputnode.h
src/io/: artnet.h  cv.h  dmxserial.h  dumper.h  fs.h  localanimation.h  midi.h  mqtt.h  networking.h  opc.h  osc.h  sacn.h  serial.h  strip-multi.cpp  strip-multi.h  strip.cpp  strip.h  unit.h
src/io/extra/: ArtExtPoll.h
test/d1_mini/: test_main.cpp
test/native/: test_empty.cpp
